--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>BookList</title>
+  <title>Booklist</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">BookList</a>
+      <a class="navbar-brand" href="#">Booklist</a>
     </div>
   </nav>
 
@@ -92,11 +92,9 @@
 
   <div class="container">
     <div class="story lead text-center">
-      <h2>Meet BookList.</h2>
+      <h2>Meet Booklist. Never forget a must-read again.</h2>
       <div class="pt-5"></div>
-      <div class="pt-5"></div>
-      <h4>Never forget a must read again.</h4>
-      <p>Move away from your scattered notes on your phone, post-its, notebooks, bookmarking, screenshots, and any other less effective way of recalling book recommendations. BookList captures and collects titles found out in your everyday life and lists them in a centralized location organized into your own customizable book lists.</p>
+      <p>Booklist is a mobile app that helps you quickly capture and collect titles encountered in your everyday life. Say goodbye to scattered phone notes, hurried scribbles, disorganized screenshots, and any other ways of remembering book recommendations.</p>
     </div>
   </div>
 
@@ -113,22 +111,22 @@
 
       <div class="col-lg-6 order-lg-2  grey-bg showcase-img" style="background-image: url('img/capture.png');"></div>
       <div class="col-lg-6 order-lg-1 my-auto showcase-text grey-bg">
-        <h2>Capture</h2>
-        <p class="lead mb-0">Fast and easy as taking notes, but more powerful. The freeform text interface allows for convenient listing of quickly jotted recommendations. Or, store your next read by using any one of BookList‘s quick captures: search engine, barcode scan, and book cover recognition powered.</p>
+        <h2>Capture Quickly</h2>
+        <p class="lead mb-0">As fast and easy as typing a note on your phone, but more powerful. The freeform text interface allows for convenient listing of quickly jotted recommendations. Or, store your next read by using any one of Booklist‘s quick captures: search engine, barcode scan, and book cover recognition powered.</p>
       </div>
     </div>
     <div class="row no-gutters">
-      <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/collect.png');"></div>
+      <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bookkeep.png');"></div>
       <div class="col-lg-6 my-auto showcase-text">
-        <h2>Collect</h2>
-        <p class="lead mb-0">Our comprehensive database and indexing enables quick, accurate identification. Organize your captured titles into customizable book lists. Create and sort groups of reads in ways that are meaningful to you.</p>
+        <h2>Bookkeep Automatically</h2>
+        <p class="lead mb-0">Our smart database automatically adds books captured in your notes into your collection. Organize your collection into customizable book lists. Create and sort groups of reads in ways that are meaningful to you.</p>
       </div>
     </div>
     <div class="row no-gutters">
-      <div class="col-lg-6 order-lg-2  grey-bg showcase-img " style="background-image: url('img/personalize.png');"></div>
+      <div class="col-lg-6 order-lg-2  grey-bg showcase-img " style="background-image: url('img/discover.png');"></div>
       <div class="col-lg-6 order-lg-1 my-auto showcase-text grey-bg">
-        <h2>Personalize</h2>
-        <p class="lead mb-0">Add remarks to your collection to add personal context. Note why a book was referred to you and what was important to recall about the interaction.</p>
+        <h2>Discover More Recommendations</h2>
+        <p class="lead mb-0">Read like a boss. Weekly features by prominent figures, industry leaders, and successful influencers will share details about their current lists and must-reads.</p>
       </div>
     </div>
   </div>
